src/test/ui/parser/let-binop.stderr
error: expected one of `!`, `(`, `+`, `::`, `;`, `<`, or `=`, found `*=`
  --> $DIR/let-binop.rs:2:15
   |
LL |     let a: i8 *= 1;
   |               ^^ expected one of 7 possible tokens

error: aborting due to previous error

